--- a/CSSChallenge.html
+++ b/CSSChallenge.html
@@ -5,7 +5,7 @@
    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="css/mystyle.css">
+    <link rel="stylesheet" href="CSS/mystyle.css">
     <title>IINF 362</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
