--- a/wiki4.html
+++ b/wiki4.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <title>CSS Challenge 4</title>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
+<link rel="stylesheet" type="text/css" href="CSS/mystyle.css">
   </head>
   <body>
     <div id="wrap">
