--- a/wiki4.html
+++ b/wiki4.html
@@ -6,11 +6,11 @@
 <link rel="stylesheet" type="text/css" href="CSS/mystyle.css">
   </head>
   <body>
-    <div id="wrap">
-      <div id="header">
+    <div class="wrap">
+      <div class="header">
         <h1>Shakespear.net</h1>
       </div>
-      <div id="nav">
+      <div class="nav">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Writings</a></li>
@@ -19,7 +19,7 @@
           <li><a href="#">About Shakespear.net</a></li>
         </ul>
       </div>
-      <div id="sidebar">
+      <div class="sidebar">
         <h2>Sonnet Index</h2>
         <ul>
           <li><a href="#">Sonnet #1</a></li>
@@ -29,7 +29,7 @@
           <li><a href="#">Sonnet #18</a></li>
         </ul>
       </div>
-      <div id="content">
+      <div class="content">
         <h1>Shakespeare's Sonnet #18</h1>
         <p>This is one of the most famous of the sonnets. It is referenced
             in the film Dead Poets Society and gave names to the band The
@@ -52,7 +52,7 @@
           <li>So long lives this, and this gives life to thee.</li>
         </ul>
       </div>
-      <div id="footer">
+      <div class="footer">
         <p class="copyright">See the 
         <a href="http://en.wikipedia.org/wiki/Shakespeare%27s_Sonnets">
         Shakespeare's sonnets</a> Wikipedia article for more information
