Update my responsive facts.html

--- a/my responsive facts.html
+++ b/my responsive facts.html
@@ -13,43 +13,13 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="nav wrapper">
-            <ul>
-                <li><a href="#">Link 1</a></li>
-                <li><a href="#">Link 2</a></li>
-                <li><a href="#">Link 3</a></li>
-                <li><a href="#">Link 4</a></li>
-            </ul>
-        </div>
-
-        <div class="main wrapper">
-            <div class="col-2">
-                <h2>Heading 1</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ut lectus et erat hendrerit fermentum vitae non elit. Vivamus vel viverra ipsum. Proin elementum non metus nec finibus. Sed lacus lorem, imperdiet viverra odio vel, pharetra feugiat enim.
-                    Mauris ornare dapibus urna. Nam sapien arcu, dictum id ipsum vitae, egestas faucibus lectus. Quisque euismod rutrum metus a rhoncus.
-                </p>
-            </div>
-            <div class="col-2">
-                <img src="http://dummyimage.com/300x200/000/fff" alt="dummy image">
-            </div>
-        </div>
-        <div class="wrapper">
-            <div class="col-3">
-                <h4>Section 1</h4>
-                <p> Mauris ornare dapibus urna. Nam sapien arcu, dictum id ipsum vitae, egestas faucibus lectus. Quisque euismod rutrum metus a rhoncus.</p>
-            </div>
-            <div class="col-3">
-                <h4>Section 1</h4>
-                <p> Mauris ornare dapibus urna. Nam sapien arcu, dictum id ipsum vitae, egestas faucibus lectus. Quisque euismod rutrum metus a rhoncus.</p>
-            </div>
-            <div class="col-3">
-                <h4>Section 1</h4>
-                <p> Mauris ornare dapibus urna. Nam sapien arcu, dictum id ipsum vitae, egestas faucibus lectus. Quisque euismod rutrum metus a rhoncus.</p>
-            </div>
-        </div>
-    </div>
+    <p clas ="one"> I am indian</p>
+    <p clas ="two"> im from westchester</p>
+    <p clas ="three"> i love bacon</p>
+    <p clas ="four"> i want to get a job</p>
+    <p clas ="five"> I like coding</p>
+    <p clas ="six"> I like video games</p>
+          
 </body>
 
 </html>
