--- a/my responsive facts.html
+++ b/my responsive facts.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="CSS/responsive.css">
 
 </head>
 
