Update my responsive facts.html

--- a/my responsive facts.html
+++ b/my responsive facts.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-    <p clas ="one"> I am indian</p>
-    <p clas ="two"> im from westchester</p>
-    <p clas ="three"> i love bacon</p>
-    <p clas ="four"> i want to get a job</p>
-    <p clas ="five"> I like coding</p>
-    <p clas ="six"> I like video games</p>
+    <p class ="one"> I am indian</p>
+    <p class ="two"> im from westchester</p>
+    <p class ="three"> i love bacon</p>
+    <p class ="four"> i want to get a job</p>
+    <p class ="five"> I like coding</p>
+    <p class ="six"> I like video games</p>
           
 </body>
 
